<resources>
    <string name="opcion1">Actividad 2</string>
    <string name="opcion2">Mi Spinner</string>
    <string name="Salir">Salir</string>
    <string name="tituloAplicacion">Mi primera app</string>
    <string name="app_name">Mi app</string>
    <string name="action_settings">Configuración</string>
    <string name="mispinner" />
    <string name="dialogo">Mi dialogo</string>
    <string name="Acercade">Acerca de </string>
    <string name="opcion3">MANIPULANDO ELEMENTOS POR CODIGO</string>
    <string name="opcion4">COMUNICACION ENTRE ACTIVIDADES</string>
</resources>

