<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="30dp"
    android:background="@drawable/fondo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/tituloAplicacion"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="cursive" />

    <Button android:id="@+id/button01"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/opcion1"
        android:layout_marginBottom="10px"
        android:background="@color/colorman3"
        android:onClick="actividad2"
        tools:ignore="OnClick" />

    <Button android:id="@+id/button02"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/opcion2"
        android:layout_marginBottom="10px"
        android:background="@color/colorman3"
        android:onClick="mispinner"
        tools:ignore="OnClick" />

    <Button android:id="@+id/button03"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/colorman3"
        android:layout_marginBottom="10px"
        android:text="@string/opcion3"
        android:onClick="manipulacion"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/dialogo"
        android:onClick="dialogo"
        android:layout_marginBottom="10px"
        android:background="@color/colorman3"
        tools:ignore="OnClick"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Acercade"
        android:onClick="AcercaDe"
        android:layout_marginBottom="10px"
        android:background="@color/colorman3"
        tools:ignore="OnClick"/>

    <Button android:id="@+id/button05"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/colorman3"
        android:layout_marginBottom="10px"
        android:text="@string/opcion4"
        android:onClick="Comunicacion1"/>

    <Button android:id="@+id/button04"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10px"
        android:background="@color/colorman3"
        android:layout_width="match_parent"
        android:onClick="salir"
        android:text="@string/Salir"/>
</LinearLayout>
